--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="Portfólio para o ElasNaTech">
+    <meta name="author" content="Thatiana Mattos">
+    <link rel="stylesheet" href="style.css">
+    <title>Portoflio Thatiana Mattos</title>
 </head>
 <body>
+    <header class="header-container">
+        <div class="header">
+
+        </div>
+        <h1>Thatiana Mattos</h1>
+        <h2>Dev Front-end</h2>
+        <div class="social-media">
+            <a href="#">Linkedin</a>
+            <a href="">Github</a>
+        </div>
+
+    </header>
+    <main class="container">
+
+
+    </main>
+    <footer class="footer">
+
+
+    </footer>
     
 </body>
 </html>
