modificando os icones e disposições

--- a/projetos.html
+++ b/projetos.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Portfolio">
     <meta name="author" content="Thatiana Mattos">
 
-    <title> &lt; Meu Portfolio &gt; </title>
+    <title>Thatiana Mattos Portifólio</title>
 
      <!-- ícone na aba -->
      <link rel="shortcut icon" href="imagens/tag.ico" type="image/x-icon">
