modificações na disposição

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div id="voltarTopo">
-            <a class="button_seta" href="#" id="up"><img src="imagens\upload_9546576.png"></a>
+            <a class="button_seta" href="#" id="up"><img src="imagens\up-arrow_6976991.png"></a>
           </div>
     </main>
     <footer class="footer">
