--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
         </div>
         <h1>Thatiana Mattos</h1>
         <h2 class="h2">Desenvolvedora Front-end</h2>
+        <figure>
+            <figcaption>Ouça enquanto navega:</figcaption>
+            <audio
+                controls
+                src="airplounge.mp3" loop="infinity">
+                    Seu Navegador não suporta o
+                    <code>audio</code> mp3.
+            </audio>
+        </figure>
         <div class="social-media">
                <a href="https://www.linkedin.com/in/thatiana-mattos/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
          
@@ -91,9 +100,7 @@
                 <p>Cardápio Confeitaria.</p>
             </div>
         </div>
-        <div id="voltarTopo">
-            <a class="button_seta" href="#" id="up"><img src="imagens\up-arrow_6976991.png"></a>
-          </div>
+       
     </main>
     <footer class="footer">
         Feito por Thatiana Mattos &copy;
