--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Portfolio criado através de tutoriais">
     <meta name="author" content="Thatiana Mattos">
     <meta name="keywords" content="Portfolio para o Elas Na_Tech">
     <!-- GOOGLE FONTS -->
@@ -33,10 +33,10 @@
 
           <nav class="menu-desktop">
               <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Sobre Mim</a></li>
-                  <li><a href="#">Projetos</a></li>
-                  <li><a href="#">Contato</a></li>
+                  <li><a href="#inicio">Home</a></li>
+                  <li><a href="#Sobre Mim">Sobre Mim</a></li>
+                  <li><a href="#Projetos">Projetos</a></li>
+                  <li><a href="#Contato">Contato</a></li>
               </ul>
           </nav>
 
