--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
               <nav>
                   <ul>
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">Sobre Mim</a></li>
-                      <li><a href="#">Portfólio</a></li>
-                      <li><a href="#">Contato</a></li>
+                      <li><a href="#Home">Home</a></li>
+                      <li><a href="#Sobre Mim">Sobre Mim</a></li>
+                      <li><a href="#Portfolio">Portfólio</a></li>
+                      <li><a href="#Contato">Contato</a></li>
                   </ul>
               </nav>
 
@@ -87,7 +87,7 @@
                       <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante, funcionalidade intuitiva e otimização para resultados, estou pronta para criar a presença online dos seus sonhos.Atualizando os seus conceitos </p>
 
                       <div class="btn-contato">
-                          <a href="#">
+                          <a href="#Contato">
                               <button>Entre em contato</button>
                           </a>
                       </div>
@@ -104,25 +104,25 @@
             <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
             <div class="flex">
                 <div class="especialidades-box">
-                    <i class="bi bi-code-square"></i>
+                    <i class="bi bi-chat-heart"></i>
                     <h3>Criatividade</h3>
                     <p>Adoro dar sugestões e novas idéias.</p>
                 </div><!--especialidades-box-->
 
                 <div class="especialidades-box">
-                    <i class="bi bi-cart"></i>
+                    <i class="bi bi-eyeglasses"></i>
                     <h3>Dedicação</h3>
                     <p>Sempre faço o melhor que puder para fazer o meu trabalho!</p>
                 </div><!--especialidades-box-->
 
                 <div class="especialidades-box">
-                  <i class="bi bi-cart"></i>
+                  <i class="bi bi-people-fill"></i>
                   <h3>Facilidade em trabalhar em equipe</h3>
                   <p>De preferência uma grande equipe</p>
               </div><!--especialidades-box-->
 
                 <div class="especialidades-box">
-                    <i class="bi bi-wordpress"></i>
+                    <i class="bi bi-pencil"></i>
                     <h3>Sempre interessada em aprender</h3>
                     <p>Para adqurir novos conhecimentos, não há limites!! :)</p>
                 </div><!--especialidades-box-->
@@ -146,9 +146,9 @@
                         .</p>
                       <p>Como desenvolvedora de software, minhas especialidades incluem análise e desenvolvimento de sistemas, HTML, CSS e JavaScript. Eu tenho experiência em trabalhar em projetos que envolvem essas tecnologias e sou capaz de criar soluções eficazes para problemas complexos. Meu conhecimento em análise e desenvolvimento de sistemas me permite entender as necessidades do cliente e criar soluções personalizadas para atender a essas necessidades. Além disso, minha experiência em HTML, CSS e JavaScript me permite criar interfaces de usuário atraentes e interativas que melhoram a experiência do usuário. Estou sempre procurando aprender mais sobre as últimas tendências em tecnologia e estou animada para aplicar meu conhecimento para ajudar a criar soluções inovadoras para os clientes..</p>
                       <div class="btn-social">
-                          <a href="#"><button><i class="bi bi-instagram"></i></button></a>
-                          <a href="#"><button><i class="bi bi-github"></i></button></a>
-                          <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                          <a href="#instagram"><button><i class="bi bi-instagram"></i></button></a>
+                          <a href="#github"><button><i class="bi bi-github"></i></button></a>
+                          <a href="#linkedin"><button><i class="bi bi-linkedin"></i></button></a>
                       </div><!--btn-social-->
                   </div><!--txt-sobre-->
               </div><!--flex-->
