ajuste das imagens

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                       </span>
                     </span>
                    <!-- Projeto 2 -  Curriculo -->
-                  <div class="img-port" style="background-image: url(imagens/Curriculo.jpeg);">
+                  <div class="img-port" style="background-image: url(imagens\Curriculo.jpeg);">
                   <div class="overlay">Projeto 2</div>
                   </div>
                   <a class="portfolio-item" href="https://thatianamattos.github.io/curriculo/">
