--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
           </nav>
 
           <div class="btn-contato">
-              <a href="#">
+              <a href="#contato">
                   <button>Contato</button>
               </a>
           </div><!--btn-contato-->
 
           <div class="btn-abrir-menu" id="btn-menu">
-              <i class="bi bi-list"></i>
+            <i class="bi bi-list"></i>
           </div>
 
           <div class="menu-mobile" id="menu-mobile">
@@ -70,6 +70,7 @@
   </header>
 
   <figure>
+    <p>Ouça enquanto navega</p>
     <figcaption>Ouça enquanto navega:</figcaption>
     <audio
         controls
@@ -135,7 +136,7 @@
           <div class="interface">
               <div class="flex">
                   <div class="img-sobre">
-                      <img src="imagens\fotome.jpg" alt="fotome">
+                      <img src="imagens\Fotoeu.jpeg" alt="fotome">
                   </div><!--img-sobre-->
 
                   <div class="txt-sobre">
