--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           </div><!--line-footer-->
           <div class="line-footer borda">
               <p><i class="bi bi-envelope-fill"></i> <a href="mailto:thatianamattos25@gmail.com">thatianamattos@gmail.com</a></p>
-              <p class="text-muted small mb-0">Copyright &copy; Thatiana Mattos 2023 e créditos a Gabi Pinheiro, Gabi Viana, Lucas Silva do Canal do Front e Bruno Rodrigues da Inteliogia </p>
+              <p class="text-muted small mb-0">Copyright &copy; Thatiana Mattos 2023 </p>
           </div><!--line-footer-->
       </div><!--interface-->
   </footer>
