--- a/index.html
+++ b/index.html
@@ -187,14 +187,7 @@
                     <div class="overlay">Criação de uma calculadora de juros compostos com HTML 5.
                         CSS 3 e Javascript.
                         
-                        5°Repositório da cópia acadÊmica em Outubro/2023</div>
-                </div>
-                <div class="img-port" style="background-image: url(https://raw.githubusercontent.com/ThatianaMattos/copiasacademicas/main/imagem/plagioacademico.jpg);">
-                    <div class="overlay">Criação de uma página usando HTML 5.
-                        Acrescentei um pouco de CSS 3.
                         
-                        6°Repositório da cópia acadÊmica em Outubro/2023</div>
-                </div>
             </div><!--flex-->
         </div><!--interface-->
     </section><!--portfolio-->
@@ -230,7 +223,7 @@
           </div><!--line-footer-->
           <div class="line-footer borda">
               <p><i class="bi bi-envelope-fill"></i> <a href="mailto:thatianamattos25@gmail.com">thatianamattos@gmail.com</a></p>
-              <p class="text-muted small mb-0">Copyright &copy; Thatiana Mattos 2023 e créditos a Gabi Pinheiro, Gabi Viana, Lucas Silva do Canal do Front e Bruno Rodrigues da Inteliogia </p>
+              <p class="text-muted small mb-0">Copyright &copy; Thatiana Mattos 2023 </p>
           </div><!--line-footer-->
       </div><!--interface-->
   </footer>
